# reed_reviewer

./: .gitignore  .gitmodules  MacOsReedTracker.spec  README.md  entry_point.py  mac_auto_installer.py  mac_auto_installer.sh  pyproject.toml  setup.py
app_images/: oboeapp.icns
reed_reviewer/: recorder.py  reed_utils.py  reviewer.py
spec_file_history/: Reed Tracker v0.2.1.spec  Reed Tracker v0.2.2.spec  Reed Tracker v0.2.spec
src_kivy_app/: __main__.py
